[project]
name = "ha-integration-tester"
version = "0.0.0"
requires-python = ">=3.13"

[tool.ruff]
lint.select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # isort
    "PLC", # pylint conventions
    "PLE", # pylint errors
    "PLR", # pylint refactor
    "PLW", # pylint warnings
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
lint.ignore = [
    "D202",
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D212",    # Multi-line summary on first line (conflicts with D213)
    "E501",    # Line too long
    "PLE1205",
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "PLW2901", # Outer variable overwritten by inner target
    "UP006",   # keep type annotation style as is
    "UP007",   # keep type annotation style as is
]
exclude = [
    ".venv",
    ".git",
    ".tox",
    "docs",
    "venv",
    "bin",
    "lib",
    "deps",
    "build",
]
line-length = 88

[tool.ruff.lint.per-file-ignores]
# Tests use nested with/if for fixture readability; SIM117/SIM102 don't
# improve clarity there. RUF043 (regex match=) and bugbear are also too
# noisy on test scaffolding.
"tests/**/*.py" = [
    "B",
    "RUF",
    "D",
    "PLR",
    "SIM117",
    "SIM102",
    "SIM105",
    "PTH",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "homeassistant",
    "first-party",
    "local-folder",
]
known-first-party = ["custom_components.integration_tester", "tests"]
combine-as-imports = true

[tool.ruff.lint.isort.sections]
"homeassistant" = ["homeassistant"]


[tool.pylint.MASTER]
ignore = ["tests"]
load-plugins = ["pylint_strict_informational"]
persistent = false
extension-pkg-whitelist = ["ciso8601", "cv2"]

[tool.pylint.BASIC]
good-names = ["_", "ev", "ex", "fp", "i", "id", "j", "k", "Run", "T"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "format",
    "abstract-method",
    "cyclic-import",
    "duplicate-code",
    "inconsistent-return-statements",
    "locally-disabled",
    "not-context-manager",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "too-many-boolean-expressions",
    "unused-argument",
    "wrong-import-order",
]
enable = [
    "use-symbolic-message-instead",
]

[tool.pylint.REPORTS]
score = false

[tool.pylint.TYPECHECK]
ignored-classes = [
    "_CountingAttr", # for attrs
]

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"

[tool.pylint.EXCEPTIONS]
overgeneral-exceptions = ["BaseException", "Exception", "HomeAssistantError"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]  # conflicts with black/ruff slice formatting

[tool.mypy]
ignore_missing_imports = true
implicit_reexport = true
show_error_codes = true
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "redundant-self", "truthy-iterable"]
disable_error_code = ["annotation-unchecked", "call-arg", "arg-type", "union-attr", "override", "typeddict-item", "index"]
